# open-source-software

./: index.md
labs/lab-01/: lab-01.md
labs/lab-02/: lab-02.md
labs/lab-10/: checkpoint4.py  checkpoint5.py  definitions.json  lab10.md
labs/lab-11/: checkpoint2.py  lab11.md
labs/lab-3/: Lab3Part1.tex  lab3.md
labs/lab-4/: lab4.md
labs/lab-5/: .gitignore  lab5.md
labs/lab-5/Lab-BuildSystemsPart2/: CMakeLists.txt  Makefile
labs/lab-5/tutorial/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
labs/lab-5/tutorial/Step2/: CMakeLists.txt  tutorial.cxx
labs/lab-5/tutorial/Step3/MathFunctions/: CMakeLists.txt
labs/lab-5/tutorial/Step4/: CMakeLists.txt
labs/lab-5/tutorial/Step4/MathFunctions/: CMakeLists.txt
labs/lab-5/tutorial/Step5/MathFunctions/: CMakeLists.txt  mysqrt.cxx
labs/lab-6/: .gitignore  lab6.md  plot_four_letter_words.py  plot_words_no_order.py
labs/lab-8/: lab8.md
labs/lab-9/: .gitignore  lab9.md
labs/lab-9/example03/: Dockerfile
quizzes/quiz-1/: quiz1.md
quizzes/quiz-1/question_6/: CMakeLists.txt  Makefile
quizzes/quiz-2/: Dockerfile  file1.txt  file2.txt  question2.py  question5.py
